Bug 1838502 - Don't expose a title for labels. r=morgan

THis is what VO expects, we apparently knew that but decided it wasn't worth fixing in the past

Differential Revision: https://phabricator.services.mozilla.com/D244050