accessible/tests/browser/mac/browser_label_title.js
@@ -22,8 +22,8 @@ addAccessibleTask(
     let n1 = getNativeInterface(accDoc, "n1");
     let n1Label = n1.getAttributeValue("AXTitleUIElement");
     // XXX: In Safari the label is an AXText with an AXValue,
-    // here it is an AXGroup witth an AXTitle
-    is(n1Label.getAttributeValue("AXTitle"), "Label");
+    // we emulate that so VoiceOver does not speak the label twice.
+    is(n1Label.getAttributeValue("AXTitle"), "");
 
     let n2 = getNativeInterface(accDoc, "n2");
     is(n2.getAttributeValue("AXDescription"), "Two Labels");
